refactor: some tests regarding drawing with fabric

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -3,6 +3,7 @@
     --z-main-bg: -1;
     --z-ref-container: 9999;
     --z-ref-img: 0;
+    --z-ref-compose: 399999;
     --z-ref-img-bg: 0;
     --z-ref-img-magnifier: 10100;
     --z-ref-img-onion: 0;
