--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -28,6 +28,7 @@
                 <tr><td>Frame </td><td id="stat-frame" class="table-value">0</td></tr>
             </table>
         </div>
+{#        <canvas id="compose-overlay" width="400" height="400"></canvas>#}
         <img class="modal-img" src="{{ content_url }}" alt="{# setup #}" tabindex="0">
     </div>
 
