feat: added selection tile counter

--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -28,7 +28,7 @@
     <button id="tags-show-btn" class="btn-bg-blend">Show tags</button>
     <button id="tags-filter-btn" class="btn-bg-blend">Filter tags</button>
     <button id="tags-editor-btn" class="btn-bg-blend">Edit tags</button>
-    <button id="toggle-selection-mode-btn" class="btn-bg-blend">Select</button>
+    <button id="toggle-selection-mode-btn" class="btn-bg-blend">Select <span id="sel-count"></span></button>
 </div>
 
 <div id="tpl-thumbnail" class="thumbnail vis-hide" title="{#{{ image.filename }}#}" data-id="{#{{ image.image_id }}#}" data-fn="{#{{ image.filename }}#}" data-rt="{#{{ image.rating }}#}">
