feat: ability to draw on top of image, yay!

--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -154,10 +154,16 @@ body {
     cursor: crosshair !important;
 }
 
-#compose-overlay
+#draw-overlay
 {
-    /*position: absolute;*/
+    position: absolute;
+    display: flex;
     z-index: var(--z-ref-compose);
+    opacity: 0.5;
+}
+.draw-selected
+{
+    border: 2px solid;
 }
 
 
