experimental: fetching booru tags for images by using /export-url (tags setup supported), then fetch.py (manual paths setup), then /tags-ai/suck-folder-in, then /tags-ai/update-mapped-tags. This will update ImageTag table in according to tag mapping done in tags_ai_to_tags table. AI tags in the gallery UI would be marked as "robot" emoji in the info section of the image

--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -254,6 +254,10 @@ span #time-current {
   margin-left: 10px;
 }
 
+li.ai-tag {
+    list-style: "🤖 ";
+}
+
 .pallet-container
 {
     position: fixed;
