--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -9,8 +9,10 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    overflow: hidden;
+
+    min-height: 100vh;
+    position: relative;
+    /*overflow: hidden;*/
 }
 
 /*.g-centered*/
@@ -57,6 +59,7 @@ body {
     filter: blur(8px);
     z-index: var(--z-main-bg);
     transition: filter 0.3s ease;
+    overflow: hidden;
 }
 
 .modal-bg img {
@@ -68,6 +71,8 @@ body {
     object-fit: cover;
     transform: translate(0%, 5%) scale(1.2);
     transition: filter 0.3s ease;
+    /*clip-path: rect(0px 0px 100vw 100vh);*/
+    /*clip-path: rect(5px 5px 160px 145px round 20%);;*/
 }
 
 .modal-bg-gray
@@ -383,4 +388,50 @@ li.ai-tag {
 
     /*width: 100%;*/
     /*height: 100%;*/
+}
+
+/* CANVAS CONTROLS */
+.canvas-controls {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: calc(var(--z-ref-compose) + 100);
+
+    gap:10px;
+    padding: 10px;
+}
+
+.canvas-controls-flex
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
+
+.canvas-controls button {
+    min-width: 2rem;
+    min-height: 2rem;
+    border-radius: 5px;
+}
+
+.canvas-controls .slider-container
+{
+    display: inline-block;
+}
+
+.canvas-controls .slider-container label,
+.canvas-controls .slider-container input
+{
+    display: block;
+}
+
+.canvas-controls input[type="range"] {
+    writing-mode: vertical-lr;
+}
+
+.inline-block
+{
+
 }
