--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -113,7 +113,7 @@
     </div>
 </div>
 
-<div class="vis-hide canvas-controls canvas-controls-flex" id="draw-canvas-controls">
+<div class="vis-hide canvas-controls canvas-controls-flex canvas-controls-right" id="draw-canvas-controls">
 {#    <label for="draw-cnv">Drawing:</label>#}
     <button class="btn-bg-blend vis-hide" id="tlp-draw-clr" value="#000000ff">С1</button>
     <button class="btn-bg-blend" id="draw-eraser" value="#ffffff00">Ers</button>
