--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -12,7 +12,6 @@ body {
 
     min-height: 100vh;
     position: relative;
-    /*overflow: hidden;*/
 }
 
 /*.g-centered*/
@@ -193,17 +192,30 @@ body {
     align-self: flex-start;
     /*justify-content: space-between;*/
     transition: background-color 0.15s;
+    padding: 10px;
+    border-radius: 10px;
 }
 .modal-controls .row {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px;
+}
+
+.modal-controls label {
+    margin-right: 5px;
 }
 
 .modal-controls select,
 .modal-controls button {
     margin: 3px;
+    border-radius: 2px;
+}
+
+.modal-controls button {
+   padding: 2px 5px;
+    border: none;
 }
 
 .modal-controls select {
