--- a/templates/tpl_widget_boards_all.html
+++ b/templates/tpl_widget_boards_all.html
@@ -5,7 +5,7 @@
         <option value="{{ b.id }}">{{ b.title }}</option>
         {% endfor %}
     </select>
-    <button id="board-send-btn" data-url="{{ url_for('routes_board.add_images_to_board') }}">Sent to board</button>
+    <button id="board-send-btn" data-url="{{ url_for('routes_board.add_images_to_board') }}">Send to board</button>
     <button id="board-send-close-btn">Close</button>
 </div>
 {#<script type="text/javascript" src="/static/js/add_to_board.js"></script>#}
