--- a/static/styles/overview.css
+++ b/static/styles/overview.css
@@ -118,6 +118,7 @@ main h2:nth-of-type(1) {
     z-index: var(--z-tile);
     border: 2px solid;
     border-color: rgba(0,0,0,0.0);
+    background-color: var(--clr-gray3);
     transition: border-color var(--anim-tile-hover)
 }
 .tile:hover {
