--- a/templates/tpl_discover.html
+++ b/templates/tpl_discover.html
@@ -12,7 +12,7 @@
     <div id="lower-trigger"></div>
 </div>
 
-<div id="post-tpl" class="vis-hide post">
+<div id="post-tpl" class="hidden post">
     <div class="content">
         <a href="" target="_blank">
             <img src="" alt=""/>
