--- a/templates/tpl_view_board.html
+++ b/templates/tpl_view_board.html
@@ -9,7 +9,7 @@
     <title>{{ board.title }}</title>
 </head>
 <body>
-<div class="vis-hide" id="board-id">{{ board.id }}</div>
+<div class="hidden" id="board-id">{{ board.id }}</div>
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="{{ url_for('routes_board.view_board_all') }}">&lt;</a><h1>{{ board.title }}</h1>
 </div>
