--- a/templates/tpl_view_dupes.html
+++ b/templates/tpl_view_dupes.html
@@ -22,7 +22,7 @@
             <div class="thumbnail" data-id="{{ d[0] }}">
                 <a href="/study-image/{{ d[0] }}?same-folder=true&time-planned=120">
                     <img src="" class="thumb thumb-hidden" data-src="/thumb/{{ d[0] }}.jpg" alt="{{ d[0] }}">
-                    <div class="overlay vis-hide">
+                    <div class="overlay hidden">
                         <span class="tags-list"></span>
                     </div>
                 </a>
@@ -30,7 +30,7 @@
             <div class="thumbnail" data-id="{{ d[1] }}">
                 <a href="/study-image/{{ d[1] }}?same-folder=true&time-planned=120">
                     <img src="" class="thumb thumb-hidden" data-src="/thumb/{{ d[1] }}.jpg" alt="{{ d[1] }}">
-                    <div class="overlay vis-hide">
+                    <div class="overlay hidden">
                         <span class="tags-list"></span>
                     </div>
                 </a>
