--- a/templates/tpl_widget_boards_all.html
+++ b/templates/tpl_widget_boards_all.html
@@ -1,4 +1,4 @@
-<div id="boards-popup" class="popup vis-hide">
+<div id="boards-popup" class="popup hidden">
     <label for="boards">Board</label><select id="boards">
         <option value="-1">None</option>
         {% for b in boards %}
