--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -92,7 +92,7 @@ ul {list-style: none;}
 /*#region UTILS*/
 
 /* Use instead of style="display: hidden" */
-.vis-hide
+.hidden
 {
     display: none !important;
 }
