--- a/static/styles/image.css
+++ b/static/styles/image.css
@@ -4,159 +4,256 @@
     --cursor-stop-0:  url("/static/images/cursor-solid-18.png");
     --cursor-stop-p1: url("/static/images/cursor-solid-36.png");
     --cursor-stop-p2: url("/static/images/cursor-solid-72.png");
+
+    --padding-main: 10px;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-
-    min-height: 100vh;
+    min-height: var(--vh);
     position: relative;
 }
 
-/*.g-centered*/
-/*{*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    z-index: var(--z-ref-container);*/
-/*    overflow: hidden;*/
-/*    text-align: center;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    !*justify-content: space-between;*!*/
-/*    flex-direction: column; !* add column flex direction *!*/
-/*}*/
+/*#region BACKGROUND */
 
-.modal {
-    display: flex;
-    flex-wrap: wrap;
-    position: fixed;
+.media-bg {
+    overflow: hidden;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    z-index: var(--z-ref-container);
-    overflow: hidden;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    /*justify-content: space-between;*/
-    flex-direction: column; /* add column flex direction */
-}
-
-.modal-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    filter: blur(8px);
+    height:100%;
     z-index: var(--z-main-bg);
-    transition: filter 0.3s ease;
-    overflow: hidden;
+    background-color: var(--clr-main-bg);
 }
 
-.modal-bg img {
+.media-bg img {
     position: absolute;
     top: 0;
     left: 0;
-    width:100%;
+    width: 100%;
     height:100%;
     object-fit: cover;
     transform: translate(0%, 5%) scale(1.2);
-    transition: filter 0.3s ease;
-    /*clip-path: rect(0px 0px 100vw 100vh);*/
-    /*clip-path: rect(5px 5px 160px 145px round 20%);;*/
 }
 
-.modal-bg-gray
+.media-bg-gray
 {
     filter: grayscale(100%) blur(8px);
 }
 
-.modal-img-container
-{
-    flex-basis: 80%;
-    margin: 10px;
-    display: block;
-    object-fit: contain;
-    max-width: calc(75vw - 20px); /* 20px margin on left and right */
-    max-height: calc(100vh - 20px); /* 20px margin on top and bottom */
-    /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
-}
+/*#endregion BACKGROUND */
 
-.modal-img {
-    /*flex-basis: 80%;*/
-    /*margin: 20px;*/
-    display: block;
-    object-fit: contain;
+
+/*#region MAIN */
+
+main.content {
+    position: relative;
+    overflow: hidden;
     width: 100%;
-    height: 100%;
-    /*max-width: calc(100% - 40px); !* 20px margin on left and right *!*/
-    /*max-height: calc(100% - 40px); !* 20px margin on top and bottom *!*/
-    /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
-    transition: filter 0.2s ease;
+    height: 100vh;
+    padding: var(--padding-main);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+
+    user-select: none;
 }
 
-.modal-img-darken
-{
-    filter: brightness(50%);
+main.content-grid {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 10px;
+    justify-items: center;
+    align-items: center;
 }
 
-.modal-img-gray { filter: grayscale(100%); }
-
-.modal-img-gray-contrast-150  { filter: grayscale(100%) contrast(1.5); }
-.modal-img-gray-contrast-200  { filter: grayscale(100%) contrast(2); }
-.modal-img-gray-contrast-300  { filter: grayscale(100%) contrast(3); }
-.modal-img-gray-contrast-1000 { filter: grayscale(100%) contrast(10); }
-
-.magnification-container
-{
-    position: absolute;
-    left: calc(50vw);
-    top: calc(50vh);
-    translate: -50% -50%;
-    width: calc(100vw);
-    height: calc(100vh);
-    z-index: var(--z-ref-img-magnifier);
-}
-.magnification
-{
-    pointer-events: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-repeat: no-repeat;
-    transition: filter 0.2s ease;
-    transform-origin: center;
-}
-.magnification img {
-    pointer-events: none;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+main aside {
+    position: relative;
+    min-width: 1px;
+    min-height: 1px;
 }
 
-.modal-img, .magnification, .magnification-container
-{
+/*#endregion MAIN */
+
+
+/*#region MEDIA */
+
+.media {
+    position: relative;
     cursor: var(--cursor-transp);
 }
 
-.cursor-stop-m2 {cursor: var(--cursor-stop-m2) , auto !important;}
-.cursor-stop-m1 {cursor: var(--cursor-stop-m1) , auto !important;}
-.cursor-stop-0 {cursor: var(--cursor-stop-0) , auto !important;}
-.cursor-stop-p1 {cursor: var(--cursor-stop-p1) , auto !important;}
-.cursor-stop-p2 {cursor: var(--cursor-stop-p2) , auto !important;}
-
-.modal-img-color-picker
-{
-    cursor: crosshair !important;
+.media img {
+    display: block;
+    border-radius: 5px;
+    object-fit: contain;
+    width: 100%;
+    max-height: calc(100vh - 20px);
 }
+
+/*#endregion MEDIA */
+
+
+/*#region CONTROLS */
+
+.media-controls {
+    position: relative;
+    display: flex;
+    min-width: 300px;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    transition: background-color 0.15s;
+}
+.media-controls:hover
+{
+    background-color: var(--clr-img-ctrl-bg-hover);
+}
+
+.media-controls.media-controls-collapsed {
+    position: absolute;
+    transform: translateY(-50%);
+}
+
+/*.media-controls-expanded {*/
+/*    position: absolute;*/
+/*    top:0;*/
+/*    right: calc(0px - var(--padding-main)*1.2);*/
+/*    transform: translateY(-50%);*/
+/*    border-bottom-right-radius: 0;*/
+/*    border-top-right-radius: 0;*/
+/*}*/
+
+.media-controls .row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+}
+
+.media-controls label {
+    margin-right: 5px;
+}
+
+.media-controls select,
+.media-controls button {
+    margin: 3px;
+    border-radius: 2px;
+    font-family: inherit;
+    font-size: inherit;
+    color:  inherit;
+}
+
+.media-controls button {
+    padding: 2px 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.media-controls select {
+    min-width: 120px;
+    max-width: calc(10vw);
+}
+
+.media-controls .space
+{
+    margin-left: 10px;
+}
+
+.controls-toggle {
+    position: absolute;
+    top: 50%;
+    left: -23px;
+}
+
+button.controls-toggle-btn {
+    width: 20px;
+    height: 40px;
+    padding: 5px;
+    font-family: inherit;
+    font-size: 1.1em;
+    font-weight: bold;
+    border-radius: 5px 0 0 5px;
+    border: 1px solid;
+    border-color: #00000000;
+    border-right: 0;
+    outline: none;
+    background-color: #00000000;
+    transform: translateY(-50%);
+}
+.media-controls:hover .controls-toggle-btn {
+    border-color: #000000;
+    background-color: var(--clr-img-ctrl-bg-hover);
+}
+
+span #time-current {
+    display: inline-block;
+    width: 40px;
+    text-align: right;
+}
+
+.media-controls .row.timer {
+    margin-bottom: 10px;
+}
+.timer-icon
+{
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+    background-size: cover;
+    background-image: var(--url-icon-timer);
+}
+
+.fav
+{
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    background-image: var(--url-icon-favoff);
+    cursor: pointer;
+}
+
+.fav.on
+{
+    background-image: var(--url-icon-favon);
+}
+
+#copyButton {
+  margin-left: 10px;
+}
+
+.dir-link
+{
+    width: 15px;
+    height: 15px;
+}
+
+/*#endregion CONTROLS */
+
+
+/*#region INFO */
+
+li.ai-tag {
+    list-style: "🤖 ";
+}
+
+.popup-row #tags a, .popup-row #tags a:visited, .popup-row #tags a:focus
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+.popup-row #tags a:hover
+{
+    color: inherit;
+    text-decoration: underline;
+}
+
+/*#endregion INFO */
+
+
+/*#region DRAWING */
 
 #draw-overlay
 {
@@ -170,109 +267,65 @@ body {
     border: 2px solid;
 }
 
+.canvas-controls {
+    position: absolute;
+    top: 50%;
+    transform:  translateY(-50%);
+    z-index: calc(var(--z-ref-compose) + 100);
 
-.dir-link
-{
-    width: 15px;
-    height: 15px;
-}
-
-.image-flip
-{
-    transform: scaleX(-1);
-}
-
-
-.modal-controls {
-    display: flex;
-    min-width: 300px;
-    flex-direction: column; /* add column flex direction */
-    align-items: center;
-    /*flex-wrap: wrap;*/
-    align-self: flex-start;
-    /*justify-content: space-between;*/
-    transition: background-color 0.15s;
+    gap:10px;
     padding: 10px;
-    border-radius: 10px;
 }
-.modal-controls .row {
+
+.canvas-controls-left {
+    left: 0;
+}
+.canvas-controls-right {
+    right: 0;
+}
+
+.canvas-controls-flex
+{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
 }
 
-.modal-controls label {
-    margin-right: 5px;
+.canvas-controls button {
+    min-width: 2rem;
+    min-height: 2rem;
+    border-radius: 5px;
 }
 
-.modal-controls select,
-.modal-controls button {
-    margin: 3px;
-    border-radius: 2px;
-}
-
-.modal-controls button {
-   padding: 2px 5px;
-    border: none;
-}
-
-.modal-controls select {
-    min-width: 120px;
-    max-width: calc(10vw);
-}
-
-.modal-controls .space
+.canvas-controls .slider-container
 {
-    margin-left: 10px;
-}
-
-.modal-controls:hover
-{
-    background-color: var(--clr-img-ctrl-bg-hover);
-}
-
-@media only screen and (max-width: 768px) {
-    .modal img {
-        max-height: 80%;
-        flex-basis: 100%;
-    }
-}
-
-span #time-current {
     display: inline-block;
-    width: 40px;
-    text-align: right;
 }
 
-.timer-icon
+.canvas-controls .slider-container label,
+.canvas-controls .slider-container input
 {
-    width: 25px;
-    height: 25px;
-    background-size: cover;
-    background-image: var(--url-icon-timer);
+    display: block;
 }
 
-.fav
+.canvas-controls input[type="range"] {
+    writing-mode: vertical-lr;
+}
+
+.canvas-controls input[type="range"]::-webkit-slider-thumb,
+.canvas-controls input[type="range"]::-moz-range-thumb {
+    width: 2rem;
+    height: 2rem;
+}
+
+/*#endregion DRAWING */
+
+/*#region PALETTE */
+
+.media.modal-img-color-picker
 {
-    width: 25px;
-    height: 25px;
-    background-size: cover;
-    background-image: var(--url-icon-favoff);
-}
-
-.on
-{
-    background-image: var(--url-icon-favon);
-}
-
-#copyButton {
-  margin-left: 10px;
-}
-
-li.ai-tag {
-    list-style: "🤖 ";
+    cursor: crosshair !important;
 }
 
 .pallet-container
@@ -340,17 +393,90 @@ li.ai-tag {
     pointer-events: none;
 }
 
-.popup-row #tags a, .popup-row #tags a:visited, .popup-row #tags a:focus
+/*#endregion PALETTE */
+
+
+/*#region FLIP */
+
+.image-flip
 {
-    color: inherit;
-    text-decoration: none;
+    transform: scaleX(-1);
 }
 
-.popup-row #tags a:hover
+/*#endregion FLIP */
+
+
+/*#region GRAYSCALE */
+
+.modal-bg-gray
 {
-    color: inherit;
-    text-decoration: underline;
+    filter: grayscale(100%) blur(8px);
 }
+
+.modal-img-gray { filter: grayscale(100%); }
+
+.modal-img-gray-contrast-150  { filter: grayscale(100%) contrast(1.5); }
+.modal-img-gray-contrast-200  { filter: grayscale(100%) contrast(2); }
+.modal-img-gray-contrast-300  { filter: grayscale(100%) contrast(3); }
+.modal-img-gray-contrast-1000 { filter: grayscale(100%) contrast(10); }
+
+/*#endregion GRAYSCALE */
+
+
+/*#region CURSOR */
+
+.cursor-stop-m2 {cursor: var(--cursor-stop-m2) , auto !important;}
+.cursor-stop-m1 {cursor: var(--cursor-stop-m1) , auto !important;}
+.cursor-stop-0 {cursor: var(--cursor-stop-0) , auto !important;}
+.cursor-stop-p1 {cursor: var(--cursor-stop-p1) , auto !important;}
+.cursor-stop-p2 {cursor: var(--cursor-stop-p2) , auto !important;}
+
+/*#endregion CURSOR */
+
+
+/*#region MAGNIFICATION */
+
+.modal-img-darken
+{
+    filter: brightness(50%);
+}
+
+.magnification, .magnification-container
+{
+    cursor: var(--cursor-transp);
+}
+
+.magnification-container
+{
+    position: absolute;
+    left: calc(50vw);
+    top: calc(50vh);
+    translate: -50% -50%;
+    width: calc(100vw);
+    height: calc(100vh);
+    z-index: var(--z-ref-img-magnifier);
+}
+.magnification
+{
+    pointer-events: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-repeat: no-repeat;
+    transition: filter 0.2s ease;
+    transform-origin: center;
+}
+.magnification img {
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/*#endregion MAGNIFICATION */
+
+
+/*#region DROP IMAGE */
 
 #drop-target
 {
@@ -383,79 +509,27 @@ li.ai-tag {
     font-family: Tahoma, sans-serif;
 }
 
-.fractured-colors
-{
-    position: fixed;
-    /*top:50%;*/
-    /*left:50%;*/
-    width:100%;
-    height: 100%;
-    /*translate: -50% -50%;*/
-    z-index: var(--z-fract);
-    border: 2px black;
+/*#endregion DROP IMAGE */
+
+
+/*#region MEDIA QUERY */
+
+@media (orientation: portrait) and (max-width: 576px) {
+
+    .media-controls {
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+
+        position: absolute;
+        top: 50%;
+        right: -20px;
+        transform: translateY(-50%);
+    }
+
+    .media-controls.media-controls-collapsed {
+        position: absolute;
+        transform: translateX(calc(100% - 20px)) translateY(-50%);
+    }
 }
 
-#fractured-colors-image
-{
-
-    /*width: 100%;*/
-    /*height: 100%;*/
-}
-
-/* CANVAS CONTROLS */
-.canvas-controls {
-    position: absolute;
-    top: 50%;
-    transform:  translateY(-50%);
-    z-index: calc(var(--z-ref-compose) + 100);
-
-    gap:10px;
-    padding: 10px;
-}
-
-.canvas-controls-left {
-    left: 0;
-}
-.canvas-controls-right {
-    right: 0;
-}
-
-.canvas-controls-flex
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-}
-
-.canvas-controls button {
-    min-width: 2rem;
-    min-height: 2rem;
-    border-radius: 5px;
-}
-
-.canvas-controls .slider-container
-{
-    display: inline-block;
-}
-
-.canvas-controls .slider-container label,
-.canvas-controls .slider-container input
-{
-    display: block;
-}
-
-.canvas-controls input[type="range"] {
-    writing-mode: vertical-lr;
-}
-
-.canvas-controls input[type="range"]::-webkit-slider-thumb,
-.canvas-controls input[type="range"]::-moz-range-thumb {
-    width: 2rem;
-    height: 2rem;
-}
-
-.inline-block
-{
-
-}
+/*#endregion MEDIA QUERY */
