--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -157,7 +157,7 @@
 </template>
 
 <template id="tpl-media-frames">
-    <div class="anim-container hidden">
+    <div class="anim-container">
         <img id="animation" src="{# setup #}" alt="" tabindex="-1"/>
         <table class="stats-overlay">
             <tr><td>Dur </td><td id="stat-dur" class="table-value">0</td></tr>
