--- a/templates/tpl_view_image.html
+++ b/templates/tpl_view_image.html
@@ -131,6 +131,7 @@
             <label for="erase-weight">er <span class="size"></span></label>
             <input type="range" min="1" max="10" value="2" step="1" id="erase-weight"/>
         </div>
+        <button class="btn-bg-blend" id="draw-undo">Undo</button>
     </div>
 </section>
 
